--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,15 +1,280 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <TextView
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <LinearLayout
+        android:id="@+id/ll_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Home Fragment"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
-</android.support.constraint.ConstraintLayout>
+        android:orientation="vertical">
+
+        <GridLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:paddingBottom="16dp"
+            android:paddingTop="16dp"
+            android:columnCount="4"
+            android:useDefaultMargins="true"
+            android:alignmentMode="alignBounds"
+            android:background="@drawable/background_1">
+
+            <EditText
+                android:id="@+id/search_bar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawableEnd="@drawable/search"
+                android:layout_marginEnd="16dp"
+                android:layout_marginStart="16dp"
+                android:layout_columnSpan="4"
+                android:padding="6dp"
+                android:background="@color/colorWhite"
+                android:text="Search cars"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_columnSpan="4"
+                android:text="SEARCH BY MAKE"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:layout_gravity="center_horizontal"/>
+
+            <ImageView
+                android:id="@+id/make_icon_1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/colorWhite"
+                android:padding="10dp"
+                android:src="@drawable/toyota"
+                android:layout_gravity="center"
+                android:scaleType="center"/>
+
+            <ImageView
+                android:id="@+id/make_icon_2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/colorWhite"
+                android:padding="10dp"
+                android:src="@drawable/nissan"
+                android:layout_gravity="center"
+                android:scaleType="center"/>
+
+            <ImageView
+                android:id="@+id/make_icon_3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/colorWhite"
+                android:padding="10dp"
+                android:src="@drawable/honda"
+                android:layout_gravity="center"
+                android:scaleType="fitCenter"/>
+
+            <ImageView
+                android:id="@+id/make_icon_4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/colorWhite"
+                android:padding="10dp"
+                android:src="@drawable/mitsubishi"
+                android:layout_gravity="center"
+                android:scaleType="fitCenter"/>
+
+            <ImageView
+                android:id="@+id/make_icon_5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/colorWhite"
+                android:padding="10dp"
+                android:src="@drawable/subaru"
+                android:layout_gravity="center"/>
+
+            <ImageView
+                android:id="@+id/make_icon_6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/colorWhite"
+                android:padding="10dp"
+                android:src="@drawable/suzuki"
+                android:layout_gravity="center"/>
+
+            <ImageView
+                android:id="@+id/make_icon_7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/colorWhite"
+                android:padding="10dp"
+                android:src="@drawable/hino"
+                android:layout_gravity="center"/>
+
+            <ImageView
+                android:id="@+id/make_icon_8"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/colorWhite"
+                android:padding="10dp"
+                android:src="@drawable/isuzu"
+                android:layout_gravity="center"/>
+
+            <ImageView
+                android:id="@+id/btn_view_all_make"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:layout_columnSpan="4"
+                android:src="@drawable/view_all"
+                android:layout_gravity="center"/>
+        </GridLayout>
+
+        <GridLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:paddingBottom="16dp"
+            android:paddingTop="16dp"
+            android:columnCount="4"
+            android:useDefaultMargins="true"
+            android:alignmentMode="alignBounds"
+            android:background="@color/colorGrayBg">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_columnSpan="4"
+                android:text="SEARCH BY TYPE"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:layout_gravity="center_horizontal"/>
+
+            <ImageView
+                android:id="@+id/type_icon_1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/colorWhite"
+                android:padding="10dp"
+                android:src="@drawable/toyota"
+                android:layout_gravity="center"
+                android:scaleType="center"/>
+
+            <ImageView
+                android:id="@+id/type_icon_2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/colorWhite"
+                android:padding="10dp"
+                android:src="@drawable/toyota"
+                android:layout_gravity="center"
+                android:scaleType="center"/>
+
+            <ImageView
+                android:id="@+id/type_icon_3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/colorWhite"
+                android:padding="10dp"
+                android:src="@drawable/toyota"
+                android:layout_gravity="center"
+                android:scaleType="fitCenter"/>
+
+            <ImageView
+                android:id="@+id/type_icon_4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/colorWhite"
+                android:padding="10dp"
+                android:src="@drawable/toyota"
+                android:layout_gravity="center"
+                android:scaleType="fitCenter"/>
+
+            <ImageView
+                android:id="@+id/btn_view_all_type"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:layout_columnSpan="4"
+                android:src="@drawable/view_all"
+                android:layout_gravity="center"/>
+        </GridLayout>
+
+        <GridLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:paddingBottom="16dp"
+            android:paddingTop="16dp"
+            android:columnCount="4"
+            android:useDefaultMargins="true"
+            android:alignmentMode="alignBounds"
+            android:background="@color/colorWhite">
+
+            <ImageView
+                android:id="@+id/btn_quick_search"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:layout_columnSpan="4"
+                android:src="@drawable/quick_search"
+                android:layout_gravity="center"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_columnSpan="4"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:text="RECENTLY VIEWED"
+                android:layout_gravity="center_horizontal"/>
+
+            <ImageView
+                android:id="@+id/recently_viewed_1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/colorWhite"
+                android:padding="10dp"
+                android:src="@drawable/toyota"
+                android:layout_gravity="center"
+                android:scaleType="center"/>
+
+            <ImageView
+                android:id="@+id/recently_viewed_2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/colorWhite"
+                android:padding="10dp"
+                android:src="@drawable/toyota"
+                android:layout_gravity="center"
+                android:scaleType="center"/>
+
+            <ImageView
+                android:id="@+id/recently_viewed_3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/colorWhite"
+                android:padding="10dp"
+                android:src="@drawable/toyota"
+                android:layout_gravity="center"
+                android:scaleType="fitCenter"/>
+
+            <ImageView
+                android:id="@+id/recently_viewed_4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/colorWhite"
+                android:padding="10dp"
+                android:src="@drawable/toyota"
+                android:layout_gravity="center"
+                android:scaleType="fitCenter"/>
+
+        </GridLayout>
+
+
+    </LinearLayout>
+</ScrollView>
