--- a/app/src/main/res/layout/element_list_row.xml
+++ b/app/src/main/res/layout/element_list_row.xml
@@ -1,14 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:padding="16dp"
+    android:layout_width="100dp"
+    android:layout_height="100dp"
+    android:gravity="center"
+    android:orientation="vertical"
+    android:layout_margin="4dp"
     android:background="@color/colorWhite">
 
     <ImageView
-        android:id="@+id/list_item_image"
+        android:id="@+id/iv_brand_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="8dp"/>
-</RelativeLayout>
+        android:layout_margin="8dp"
+        android:scaleType="fitCenter"/>
+
+    <TextView
+        android:id="@+id/tv_brand_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:gravity="center"
+        android:hint="name"
+        android:maxLines="1"
+        android:textSize="18sp"/>
+</LinearLayout>
